Closed Bug 1597465 Opened 5 years ago Closed 4 years ago

Fix uses of nsCSSFrameConstructor::FindXULMenubarData in layout/base/nsCSSFrameConstructor.cpp

Categories

(Core :: DOM: Navigation, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla73
Fission Milestone M6
Tracking Status
firefox73 --- fixed

People

(Reporter: djvj, Assigned: tetsuharu)

References

(Blocks 1 open bug)

Details

(Whiteboard: [rm-docshell-tree-item:simple])

Attachments

(1 file)

In file layout/base/nsCSSFrameConstructor.cpp

Checks ItemType of current DocShell.

Gets parent DocShellTreeItem (not same-type) and checks for null to test whether this DocShell is root.

Change to using BrowsingContext.

Kannan says replacing nsIDocShellTreeItem calls should block enabling Fission in Nightly (M6).

Fission Milestone: --- → M6
Priority: -- → P3
Depends on: 1606528
Assignee: nobody → tetsuharu.ohzeki
Status: NEW → ASSIGNED
Pushed by tetsuharu.ohzeki@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/dd0450a6492b
Fix uses of nsCSSFrameConstructor::FindXULMenubarData in layout/base/nsCSSFrameConstructor.cpp. r=emilio
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla73
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: