Bug 1597465 - Fix uses of nsCSSFrameConstructor::FindXULMenubarData in layout/base/nsCSSFrameConstructor.cpp. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D58482